# tokodunia

./: .gitignore  README.md  db.sqlite3  docker-compose.yaml  hello.py  manage.py  package-lock.json  package.json  pyproject.toml
hello/: apps.py  forms.py  hello.html  katalog.html  login.html  models.py  urls.py  views.py
hello/migrations/: 0001_initial.py  0002_product_description_product_stock_alter_product_name.py  0003_product_image.py  0004_alter_product_image.py  0005_alter_product_image.py  0006_alter_product_image.py
hellodunia/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  edit_barang.html  hapus_barang.html  hello.html  katalog.html  login.html  tambah_barang.html
theme/static_src/: tailwind.config.js
