[project]
name = "hellodunia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.19",
    "django>=5.1.5",
    "django-environ>=0.12.0",
    "django-storages[boto3]>=1.14.5",
    "django-tailwind>=3.8.0",
    "granian>=1.7.6",
    "nodejs>=0.1.1",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "tailwind>=3.1.5b0",
]
